--- a/styles/template.less
+++ b/styles/template.less
@@ -164,8 +164,10 @@ td.k-group-cell,
 .k-widget .k-picker-wrap,
 .k-autocomplete.k-header,
 .k-autocomplete.k-state-focused,
+div.k-dropdown-wrap.k-state-active,
 .k-dropdown-wrap.k-state-focused,
 .k-dropdown-wrap.k-state-focused:hover,
+div.k-picker-wrap.k-state-active,
 .k-picker-wrap.k-state-focused,
 .k-picker-wrap.k-state-focused:hover
 {
